--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.2",
     "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5",
     "openai": "^4.52.7"
+  },
+  "scripts": {
+    "start": "bun index.js",
+    "dev": "bun index.js"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.9"
   }
 }
