--- a/.dockerignore
+++ b/.dockerignore
@@ -129,13 +129,13 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# Cache directories
-/cache/raw-html/
-/cache/extracted-data/
+# # Cache directories
+# /cache/raw-html/
+# /cache/extracted-data/
 
-# Ignore specific cache files if necessary
-cache/raw-html/*.json
-cache/extracted-data/*.json
+# # Ignore specific cache files if necessary
+# cache/raw-html/*.json
+# cache/extracted-data/*.json
 
-# Ignore last run time file
-last_run_time.json
+# # Ignore last run time file
+# last_run_time.json
